Update mockups on RASD

--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -3,16 +3,16 @@
 		Here we provide some basic mockups to show how the interface should appear to the user:\newline
 		
 		\begin{figure}[H]	
-			\centerline{\includegraphics[scale=0.4]{Images/Login}}
-			\caption{Login}
+			\centerline{\includegraphics[scale=0.4]{Images/Home}}
+			\caption{Home Page}
 		\end{figure}	
 		\begin{figure}[H]		
-			\centerline{\includegraphics[scale=0.4]{Images/suggestedsolution}}
-			\caption{Select solution}
+			\centerline{\includegraphics[scale=0.4]{Images/SelectTravelPlan}}
+			\caption{Select TravelPlan}
 		\end{figure}	
 		\begin{figure}[H]
-			\centerline{\includegraphics[scale=0.5]{Images/schedule}}
-			\caption{Visualize schedule}
+			\centerline{\includegraphics[scale=0.5]{Images/UserSchedule}}
+			\caption{User Schedule}
 		\end{figure}
 	
 	\subsubsection{Hardware Interfaces}
