update RASD latex

--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -73,6 +73,15 @@ The system interfaces with other firms (e.g. transportation companies, territory
 			\item[- \textit{[Rn]}:] nth requirement
 		\end{description}
 \subsection{Revision history}
+	\begin{description}[before={\renewcommand{\makelabel}[1]{-- \textit{##1}:}}]
+		\item[25 November 2017, RASDv2.0]\mbox{} % to have the following list on a new line
+			\begin{itemize}
+				\item removed Text Assumptions section
+				\item updated Ticket Handling sub-activity diagram
+				\item removed implementation details from Software Interfaces section
+				\item updated the mockups
+			\end{itemize}
+	\end{description}
 \subsection{Document Structure}
 After purpose and scope, used to briefly introduce the topic, we delineated the goals that the S2B should achieve coupled with a list of useful definitions and acronyms.
 Subsequently, the text proceeds with an analysis of the functions that the app should provide. The analysis starts with a general exposition of the scenarios and becomes gradually more detailed passing through the analysis of the actors that will interact with the S2B and the statement of the domain assumptions.
