--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -2,19 +2,21 @@
 	\subsubsection{User Interfaces}
 		Here we provide some basic mockups to show how the interface should appear to the user:\newline
 		
-		\begin{figure}[H]	
-			\centerline{\includegraphics[scale=0.4]{Images/Home}}
-			\caption{Home Page}
-		\end{figure}	
-		\begin{figure}[H]		
-			\centerline{\includegraphics[scale=0.4]{Images/SelectTravelPlan}}
-			\caption{Select TravelPlan}
-		\end{figure}	
 		\begin{figure}[H]
-			\centerline{\includegraphics[scale=0.5]{Images/UserSchedule}}
-			\caption{User Schedule}
+			\begin{minipage}{0.33\textwidth}
+				\centerline{\includegraphics[scale=0.4]{Images/Home}}
+				\caption{Home Page}
+			\end{minipage}
+			\begin{minipage}{0.33\textwidth}
+				\centerline{\includegraphics[scale=0.4]{Images/SelectTravelPlan}}
+				\caption{Select TravelPlan}
+			\end{minipage}
+			\begin{minipage}{0.33\textwidth}
+				\centerline{\includegraphics[scale=0.4]{Images/UserSchedule}}
+				\caption{User Schedule}
+			\end{minipage}
 		\end{figure}
-	
+
 	\subsubsection{Hardware Interfaces}
 	The main hardware interface of the system consists in the access to the GPS data
 	in the mobile application. The application also requires Internet connectivity
