fixes and improvements

--- a/DD/latex/sections/algorithmDesign.tex
+++ b/DD/latex/sections/algorithmDesign.tex
@@ -69,7 +69,7 @@
 	
 		Finally Solution Calculator sends TravelPlanSolutions to the user.\newline
 	
-	
+	\filbreak
 	\paragraph{Calculate EcoScore:}	
 	\mbox{} \newline
 		Each TravelMean has associated a travelMeanEcoPenalty, more the TravelMean is 'Eco-Friendly', less the penalty is. 'The algorithm attributes to each TravelPlan an EcoScore considering all the Rides that belong to it.
