--- a/DD/latex/sections/references.tex
+++ b/DD/latex/sections/references.tex
@@ -12,6 +12,8 @@
 		\href{https://draw.io}{\underline{Draw.io}} for UML diagrams
 	\item
 		\underline{Microsoft Visio} for ER diagram
+	\item
+		\underline{Adobe Photoshop} for Mockups
 	\end{itemize}
 \subsection{Reference Documents}
 	\begin{itemize}
