--- a/DD/latex/sections/userInterfaceDesign.tex
+++ b/DD/latex/sections/userInterfaceDesign.tex
@@ -11,32 +11,38 @@ In this diagram we represent how the app and the web App should interact with th
 	\end{figure}
 
 \subsection{App Mockups}
-Here we provide several mockups to highlight what we described in the UX Diagrams above. To logging in, a user has to insert his credentials in the Home Page. After that he is redirected to his Schedule from where he can access all the functionalities with no more than 3 clicks.
+Here we provide several mockups to highlight what we described in the UX Diagrams above. To logging in, a user has to insert his credentials in the Home Page. After that, he is redirected to his Schedule from where he can access all the functionalities with no more than 3 clicks.
 
-\begin{figure}[H]	
-	\centerline{\includegraphics[width=0.3\paperwidth]{Images/Home}}
-	\caption{Mockup - Home Page}
-\end{figure}	
-\begin{figure}[H]	
-	\centerline{\includegraphics[width=0.3\paperwidth]{Images/UserSchedule}}
-	\caption{Mockup - User Schedule}
+\begin{figure}[H]
+	\begin{minipage}{0.5\textwidth}
+		\centerline{\includegraphics[width=0.3\paperwidth]{Images/Home}}
+		\caption{Mockup - Home Page}
+	\end{minipage}
+	\begin{minipage}{0.5\textwidth}
+		\centerline{\includegraphics[width=0.3\paperwidth]{Images/UserSchedule}}
+		\caption{Mockup - User Schedule}
+	\end{minipage}
 \end{figure}
-\begin{figure}[H]	
-	\centerline{\includegraphics[width=0.3\paperwidth]{Images/Settings}}
-	\caption{Mockup -Settings}
-\end{figure}	
-\begin{figure}[H]	
-	\centerline{\includegraphics[width=0.3\paperwidth]{Images/DailySchedule}}
-	\caption{Mockup - Daily Schedule}
+\begin{figure}[H]
+	\begin{minipage}{0.5\textwidth}
+		\centerline{\includegraphics[width=0.3\paperwidth]{Images/Settings}}
+		\caption{Mockup - Settings}
+	\end{minipage}
+	\begin{minipage}{0.5\textwidth}
+		\centerline{\includegraphics[width=0.3\paperwidth]{Images/DailySchedule}}
+		\caption{Mockup - Daily Schedule}
+	\end{minipage}
 \end{figure}
-\begin{figure}[H]	
-	\centerline{\includegraphics[width=0.3\paperwidth]{Images/VisualizeAppointment}}
-	\caption{Mockup -Visualize Appointment}
+\begin{figure}[H]
+	\begin{minipage}{0.5\textwidth}
+		\centerline{\includegraphics[width=0.3\paperwidth]{Images/VisualizeAppointment}}
+		\caption{Mockup - Visualize Appointment}
+	\end{minipage}
+	\begin{minipage}{0.5\textwidth}
+		\centerline{\includegraphics[width=0.3\paperwidth]{Images/SelectTravelPlan}}
+		\caption{Mockup - Select TravelPlan}
+	\end{minipage}
 \end{figure}	
-\begin{figure}[H]	
-	\centerline{\includegraphics[width=0.3\paperwidth]{Images/SelectTravelPlan}}
-	\caption{Mockup - Select TravelPlan}
-\end{figure}
 \begin{figure}[H]	
 	\centerline{\includegraphics[width=0.3\paperwidth]{Images/LocateNearestVehicle}}
 	\caption{Mockup - Locate Nearest Vehicle}
