add RuntimeView description

--- a/DD/latex/sections/architecturalDesign.tex
+++ b/DD/latex/sections/architecturalDesign.tex
@@ -99,9 +99,13 @@
 			\centerline{\includegraphics[width=0.9\paperwidth]{Images/CD_TicketManager}}
 			\caption{Component Diagram - Ticket Manager}
 		\end{figure}
-
+\filbreak
 \subsection{Runtime view}
 	\label{sect:RuntimeView}
+	We provide in this section a dynamic view of the system, illustrating the main interactions among components.\newline
+	Five sequence diagrams are provided: Sign Up, Modify Settings, Invitation Creation, Select TravelPlan Solution, Locate Nearest Vehicle. These cover all the interesting interactions. The only interaction not analyzed is the one related to Appointment Creation: we chose to not include here a sequence diagram because we had provided in the RASD a detailed activity diagram.
+	After that, we also provide an Object Diagram of Weather \& Traffic Modules, as an explicative example of how instances of their components are related.
+
 	\subsubsection{Sequence Diagram - Sign Up}
 	\label{sect:sd_signUp}
 	\begin{figure}[H]
