update Effort Spent and Team Work

--- a/DD/latex/sections/effort&team.tex
+++ b/DD/latex/sections/effort&team.tex
@@ -1,11 +1,17 @@
-% TODO: general description
-\textit{This section will be filled at the end of the work}
-
+Trying to save time, in our sessions we tried to concentrate only on organizing our work, comparing our ideas, and discussing important issues and decisions that had to be taken as a team. We worked together 14 hours.
+\newline
+Below, for each component of the team, we provide his list of main responsibilities and his hours of work indicated as total and as spent working alone. Please note that part of the work of each person has been dedicated to cross checking the work of the others.
 \begin{description}
-	\item[Cassarino Pietro] % TODO
-	\textbf{Total hours:} ****, \textbf{Hours working alone:} ****
-	\item[Salaris Mirko] % TODO
-	\textbf{Total hours:} ****, \textbf{Hours working alone:} ****
-	\item[Ventrella Piervincenzo] % TODO
-	\textbf{Total hours:} ****, \textbf{Hours working alone:} ****
+	\item[Cassarino Pietro]
+		% TODO
+		%\newline REMOVE THE '%'
+		\textbf{Total hours:} ****, \textbf{Hours working alone:} ****
+	\item[Salaris Mirko]
+		organized the work on \LaTeX\ delineating the document structure and improving it later on. He produced most of the components diagrams and the Sequence Diagram related to the Invitation Creation. All the work related to Weather and Traffic modules has been done by him. He was even in charge of the Requirements Traceability section and of the Component Interfaces section.
+		\newline
+		\textbf{Total hours:} 45 hours, \textbf{Hours working alone:} 31 hours
+	\item[Ventrella Piervincenzo]
+		% TODO
+		%\newline REMOVE THE '%'
+		\textbf{Total hours:} ****, \textbf{Hours working alone:} ****
 \end{description}
