update Effort Spent

--- a/DD/latex/sections/effort&team.tex
+++ b/DD/latex/sections/effort&team.tex
@@ -11,7 +11,7 @@ Below, for each component of the team, we provide his list of main responsibilit
 		\newline
 		\textbf{Total hours:} 45 hours, \textbf{Hours working alone:} 31 hours
 	\item[Ventrella Piervincenzo]
-		% TODO
-		%\newline REMOVE THE '%'
-		\textbf{Total hours:} ****, \textbf{Hours working alone:} ****
+	has designed high-level architecture and client-server interaction highlighting it in several diagrams, most of which are Sequence Diagrams. He also cared for the Solution Calculator algorithm design. Other minor sections were compiled by him.
+	Finally he produced the UX diagrams and mockups to define the interaction between the user and the mobile app.
+		\textbf{Total hours:} 36, \textbf{Hours working alone:} 22
 \end{description}
