add Purpose and Scope sections

--- a/DD/latex/sections/introduction.tex
+++ b/DD/latex/sections/introduction.tex
@@ -1,9 +1,11 @@
 \subsection{Purpose}
-	% TODO
+This document is the Design Document for the Travlendar+ application. Its aim is to provide a description of the system in terms of architectural components. DD contains a description of the architectural design using component diagrams and sequence diagrams. It shows how each component is built, how it interacts with other components and how with the external actors involved. This document's aim is also to provide a technical explanation of the behaviour of some component using algorithms. It also shows user interfaces through graphical screen representation.
 	
 \subsection{Scope}
-	% TODO
-	
+Travlendar+ is an application in which the User can register and handle his appointments, eventually inviting other people. The app allows to visualize the better travel solutions to reach the place of an appointment, it also allows to check the planned schedule and to personalize the system by setting preferences and constraints (for instance, the User can choose eco-friendly  solutions or set a flexible break window time for lunch). \newline 
+The application contains a Notification system and its role is to notify users about incoming appointments, bad weather, traffic and strikes. In this way there is the possibility to organize, in an optimal way, all the travel plans related to the appointments. \newline 
+Travlendar+ also allows to purchase tickets of the transportation means belonging to the companies affiliated with the system. If the User doesn't want to take a public transportation mean, he/she can choose to opt for a sharing vehicle, another service offered by the application. 
+
 \subsection{Definitions, Acronyms, Abbreviations}
 	\subsubsection{Definitions}
 	\label{definitions}
