--- a/DD/latex/sections/effort&team.tex
+++ b/DD/latex/sections/effort&team.tex
@@ -3,15 +3,15 @@ Trying to save time, in our sessions we tried to concentrate only on organizing 
 Below, for each component of the team, we provide his list of main responsibilities and his hours of work indicated as total and as spent working alone. Please note that part of the work of each person has been dedicated to cross checking the work of the others.
 \begin{description}
 	\item[Cassarino Pietro]
-		% TODO
-		%\newline REMOVE THE '%'
-		\textbf{Total hours:} ****, \textbf{Hours working alone:} ****
+		produced Purpose and Scope of the Introduction section. He created ER diagram and Ticket Manager component diagram developing the related descriptions. He also produced Implementation, Integration and Test Plan section.
+		\newline
+		\textbf{Total hours:} 46 hours, \textbf{Hours working alone:} 32 hours
 	\item[Salaris Mirko]
 		organized the work on \LaTeX\ delineating the document structure and improving it later on. He produced most of the components diagrams and the Sequence Diagram related to the Invitation Creation. All the work related to Weather and Traffic modules has been done by him. He was even in charge of the Requirements Traceability section and of the Component Interfaces section.
 		\newline
 		\textbf{Total hours:} 45 hours, \textbf{Hours working alone:} 31 hours
 	\item[Ventrella Piervincenzo]
 	has designed high-level architecture and client-server interaction highlighting it in several diagrams, most of which are Sequence Diagrams. He also cared for the Solution Calculator algorithm design. Other minor sections were compiled by him.
-	Finally he produced the UX diagrams and mockups to define the interaction between the user and the mobile app.
-		\textbf{Total hours:} 36, \textbf{Hours working alone:} 22
+	Finally he produced the UX diagrams and mockups to define the interaction between the user and the mobile app. \newline
+		\textbf{Total hours:} 36 hours, \textbf{Hours working alone:} 22 hours
 \end{description}
