--- a/DD/latex/sections/introduction.tex
+++ b/DD/latex/sections/introduction.tex
@@ -2,9 +2,9 @@
 This document is the Design Document for the Travlendar+ application. Its aim is to provide a description of the system in terms of architectural components. DD contains a description of the architectural design using component diagrams and sequence diagrams. It shows how each component is built, how it interacts with other components and how with the external actors involved. This document's aim is also to provide a technical explanation of the behaviour of some component using algorithms. It also shows user interfaces through graphical screen representation.
 	
 \subsection{Scope}
-Travlendar+ is an application in which the User can register and handle his appointments, eventually inviting other people. The app allows to visualize the better travel solutions to reach the place of an appointment, it also allows to check the planned schedule and to personalize the system by setting preferences and constraints (for instance, the User can choose eco-friendly  solutions or set a flexible break window time for lunch). \newline 
+Travlendar+ is an application in which the User can register and handle his appointments, eventually inviting other people. The app allows visualizing the best travel solutions to reach the place of an appointment, it also allows checking the planned schedule and to personalize the system by setting preferences and constraints (for instance, the User can choose eco-friendly  solutions or set a flexible break window time for lunch). \newline 
 The application contains a Notification system and its role is to notify users about incoming appointments, bad weather, traffic and strikes. In this way there is the possibility to organize, in an optimal way, all the travel plans related to the appointments. \newline 
-Travlendar+ also allows to purchase tickets of the transportation means belonging to the companies affiliated with the system. If the User doesn't want to take a public transportation mean, he/she can choose to opt for a sharing vehicle, another service offered by the application. 
+Travlendar+ also allows purchasing tickets of the transportation means belonging to the companies affiliated with the system. If the User doesn't want to take a public transportation mean, he/she can choose to opt for a sharing vehicle, another service offered by the application. 
 
 \subsection{Definitions, Acronyms, Abbreviations}
 	\subsubsection{Definitions}
@@ -27,11 +27,11 @@ Travlendar+ also allows to purchase tickets of the transportation means belongin
 \subsection{Document Structure}
 	\begin{description}[before={\renewcommand{\makelabel}[1]{ \textbf{\textit{##1}}:}}]
 		
-		\item[1. Introduction] This serves as an introduction to the document to illustrates its purpose, scope, the conventions that will be used and its structure.
-		\item[2. Architectural Design] After providing an overview of the system, in this sections we also include all the details of the architecture and the related design decisions. We start from the data model and we describe the components and their role. After a static description a runtime analysis of the interesting components is provided. Finally we describe the main component interfaces.
-		\item[3. Algorithm Design] In this section we described the most interesting Algorithms we identified in the system, how they works and their context.
+		\item[1. Introduction] This serves as an introduction to the document to illustrate its purpose, scope, the conventions that will be used and its structure.
+		\item[2. Architectural Design] After providing an overview of the system, in this sections we also include all the details of the architecture and the related design decisions. We start from the data model and we describe the components and their role. After a static description, a runtime analysis of the interesting components is provided. Finally we describe the main component interfaces.
+		\item[3. Algorithm Design] In this section we describe the most interesting Algorithms we identified in the system, how they works and their context.
 		\item[4. User Interfaces Design] After the technical description of the previous section, here we provide indications on the User interactions with the App and mockups of the screens related to the main functionalities.
-		\item[5. Requirements Traceability] This section explains the rational behind our design decisions in terms of a mapping between the goal/requirements defined in the RASD and the components illustrated in this document.
+		\item[5. Requirements Traceability] This section explains the rationale behind our design decisions in terms of a mapping between the goal/requirements defined in the RASD and the components illustrated in this document.
 		\item[6. Implementation, Integration and Test Plan] In this last technical section, we provide a Plan for the whole development process, giving indications on the general approach, the priorities and the details of the process.
 		\item[7. Effort Spent and Team Work] Here we include a summary of the Effort Spent by each member of the team and indications on his responsibilities.
 		\item[8. References] This is the section in which we include details on Software and Tools used and the Reference Documents on which we based our work.
