--- a/DD/latex/sections/userInterfaceDesign.tex
+++ b/DD/latex/sections/userInterfaceDesign.tex
@@ -11,7 +11,7 @@ In this diagram we represent how the app and the web App should interact with th
 	\end{figure}
 
 \subsection{App Mockups}
-Here we provide several mockups to highlight what we described in the UX Diagrams above. To logging in, a user has to insert his credentials in the Home Page. After that, he is redirected to his Schedule from where he can access all the functionalities with no more than 3 clicks.
+Here we provide several mockups to highlight what we described in the UX Diagrams above. To logging in, a user has to insert his credentials in the Home Page. After that, he is redirected to his Schedule from where he can access all the functionalities with no more than three clicks.
 
 \begin{figure}[H]
 	\begin{minipage}{0.5\textwidth}
